// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Bans Can Check Broken Arrow: [object Object] 1`] = `
Object {
  "backgroundColor": "#f34f49",
  "key": "yes",
  "location": Object {
    "county": Object {
      "id": 26,
      "inEffect": true,
      "longName": "Cimarron County",
      "name": "Cimarron",
      "status": "Governor's Burn Ban",
    },
    "name": "Boise City, OK",
  },
  "message": "There is a ban in effect for Boise City, OK",
  "word": "Yes",
}
`;

exports[`Check Bans Can Check El Paso: [object Object] 1`] = `
Object {
  "backgroundColor": "#f34f49",
  "key": "yes",
  "location": Object {
    "county": Object {
      "id": 70,
      "inEffect": true,
      "longName": "El Paso County",
      "name": "El Paso",
      "status": "Active",
    },
    "name": "El Paso, TX",
  },
  "message": "There is a ban in effect for El Paso, TX",
  "word": "Yes",
}
`;
